fix on button width, fine tune on spacing in elastic agents page

--- a/source/assets/stylesheets/scss/_elastic-agents.scss
+++ b/source/assets/stylesheets/scss/_elastic-agents.scss
@@ -3,7 +3,7 @@
   padding: 0 0 100px;
 
   @media (min-width: $screen-lg) {
-    padding: 0 0 75px;
+    padding: 0 0 50px;
   }
 }
 
@@ -32,7 +32,7 @@
 }
 
 .ea-feature-container {
-  padding: 75px 0;
+  padding: 30px 0 50px;
 }
 
 .ea-feature_header {
@@ -59,7 +59,7 @@
 
 .ea-enterprise-feature {
   background: url(../images/elastic-agents-desktop-bg.png);
-  padding: 70px 0 45px;
+  padding: 30px 0 50px;
 }
 
 .ea-enterprise-feature * {
@@ -85,7 +85,7 @@
 
 .ea-ent-feature-list {
   list-style: none;
-  margin: 20px auto 80px;
+  margin: 0px auto 80px;
   padding: 0;
 
 }
@@ -120,7 +120,7 @@
 }
 
 .ea-button {
-  @media(max-width: $screen-md-max) {
+  @media(max-width: $screen-sm-max) {
     width: 100%;
   }
 }
